--- a/hello-wasm/package.json
+++ b/hello-wasm/package.json
@@ -1,14 +1,15 @@
 {
   "scripts": {
     "build": "webpack",
+    "build-watch": "webpack -w",
     "serve": "webpack-dev-server"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "text-encoding": "^0.7.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "html-webpack-plugin": "^5.5.0",
-    "copy-webpack-plugin": "^11.0.0"
+    "webpack-cli": "^5.1.4"
   }
 }
