--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.32.0", features = ["tokio-macros", "full"] }
 tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+common = { path = "../common" }
