added v1 ingester and metrics

--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -17,3 +17,4 @@ tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 common = { path = "../common" }
+hello-wasm = { path = "../hello-wasm" }
