--- a/hello-wasm/Cargo.toml
+++ b/hello-wasm/Cargo.toml
@@ -15,8 +15,10 @@ wasm-bindgen = "0.2.84"
 base64 = "0.21.4"
 chrono = { version = "0.4.31", features = ["serde"] }
 rmp-serde = "1.1.2"
-serde = { version = "1.0.188", features = ["serde_derive"] }
+serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
 serde_json = "1.0.107"
+serde-wasm-bindgen = "0.4"
+wasm-bindgen-futures = "0.4.24"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -24,11 +26,22 @@ serde_json = "1.0.107"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 thiserror = "1.0.48"
-web-sys = { version = "0.3.64", features = ["console"] }
 common = { path = "../common" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'console',
+  'Headers',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
+  'Window',
+]
 
 # [profile.release]
 # Tell `rustc` to optimize for small code size.
