--- a/hello-wasm/Cargo.toml
+++ b/hello-wasm/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.84"
+wasm-bindgen = "0.2"
 base64 = "0.21.4"
 chrono = { version = "0.4.31", features = ["serde"] }
 rmp-serde = "1.1.2"
@@ -27,9 +27,10 @@ wasm-bindgen-futures = "0.4.24"
 console_error_panic_hook = { version = "0.1.7", optional = true }
 thiserror = "1.0.48"
 common = { path = "../common" }
+js-sys = "0.3.64"
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.34"
+wasm-bindgen-test = "0.3"
 
 [dependencies.web-sys]
 version = "0.3.4"
