--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -13,7 +13,7 @@ rmp-serde = "1.1.2"
 serde = { version = "1.0.188", features = ["serde_derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["tokio-macros", "full"] }
-tower-http = { version = "0.4.4", features = ["fs", "trace"] }
+tower-http = { version = "0.4.4", features = ["cors", "fs", "trace"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 common = { path = "../common" }
